# Smaug

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Smaug.sln  styleguide.txt
.github/workflows/: build.yml  codeql-analysis.yml  msbuild.yml
Smaug/: 3dview.cpp  3dview.h  CMakeLists.txt  Smaug.vcxproj  Smaug.vcxproj.filters  actionmanager.cpp  actionmanager.h  baseexporter.cpp  baseexporter.h  basetool.cpp  basetool.h  baseview.cpp  baseview.h  basicdraw.cpp  basicdraw.h  cameramarker.cpp  cameramarker.h  containerutil.h  cursor.cpp  cursor.h  debugdraw.cpp  debugdraw.h  doodle.cpp  doodle.h  editoractions.cpp  editoractions.h  editorinterface.cpp  editorinterface.h  editview.cpp  editview.h  filesystem.cpp  filesystem.h  grid.cpp  grid.h  ibaseview.h  input.cpp  input.h  interfaceimpl.cpp  interfaceimpl.h  log.cpp  (+50 more)
Smaug/mesh/: mesh.cpp  mesh.h  meshedit.cpp  meshedit.h  meshtest.cpp  meshtest.h  slice.cpp  slice.h  tessellate.cpp  tessellate.h
Smaug/shaders/: fs_grid.sc  fs_line.sc  fs_model.sc  fs_preview_view.sc  varying.def.sc  vs_grid.sc  vs_line.sc  vs_model.sc  vs_preview_view.sc
front/: CMakeLists.txt  basicdraw.cpp  basicdraw.h  filesystem.cpp  interfaceimpl.cpp  interfaceimpl.h  main.cpp  meshrenderer.cpp  meshrenderer.h  modelmanager.cpp  modelmanager.h  shadermanager.cpp  smaugapp.cpp  smaugapp.h  texturemanager.cpp  texturemanager.h  worldrenderer.cpp  worldrenderer.h
front/shaders/: fs_grid.sc  fs_model.sc  fs_preview_view.sc  varying.def.sc  vs_line.sc  vs_model.sc  vs_preview_view.sc
smesh/: CMakeLists.txt  mesh.cpp  mesh.h  meshedit.cpp  meshedit.h  meshtest.cpp  raytest.cpp  raytest.h  slice.cpp  slice.h  tessellate.cpp  tessellate.h
sshared/: CMakeLists.txt  log.cpp  log.h  shared.cpp  shared.h
sworld/: CMakeLists.txt  actionmanager.cpp  actionmanager.h  editoractions.cpp  editoractions.h  worldeditor.cpp  worldeditor.h  worldinterface.cpp  worldinterface.h  worldsave.cpp  worldsave.h  worldtest.cpp  worldtest.h
